--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      const firebaseConfig = {
+      apiKey: "AIzaSyDJEaul_M052MxKlModSSewois2GzX1QY4",
+      authDomain: "ficha-ordem-f04a5.firebaseapp.com",
+      projectId: "ficha-ordem-f04a5",
+      storageBucket: "ficha-ordem-f04a5.appspot.com",
+      messagingSenderId: "195666323984",
+      appId: "1:195666323984:web:1dd7a6db173588ae1d3895"
     };
 
     // Initialize Firebase
